Crashes When Calling Texture Space Operators #71487

Closed
opened 2019-11-11 08:37:45 +01:00 by ronan ducluzeau · 7 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Nvidia Titan Black

Blender Version
Broken: 2.81, master
Worked: (optional)

Short description of error
If I call Move Texture Space or Scale Texture Space operator via a shortcut or via Object->Transform menu : Blender crashes.
It does not happen if Location and Scale values are modified from Texture Space panel in Mesh properties tab of Properties editor.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

In default startup.blend, open Object menu.
Open Transform sub-menu.
Click on Move Texture Space. -> crash

TSM.blender.crash.txt

**System Information** Operating system: Ubuntu 18.04 Graphics card: Nvidia Titan Black **Blender Version** Broken: 2.81, master Worked: (optional) **Short description of error** If I call Move Texture Space or Scale Texture Space operator via a shortcut or via Object->Transform menu : Blender crashes. It does not happen if Location and Scale values are modified from Texture Space panel in Mesh properties tab of Properties editor. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). In default startup.blend, open Object menu. Open Transform sub-menu. Click on Move Texture Space. -> crash [TSM.blender.crash.txt](https://archive.blender.org/developer/F8028178/TSM.blender.crash.txt)

Added subscriber: @zeauro

Added subscriber: @zeauro

Added subscriber: @dfelinto

Added subscriber: @dfelinto
0x000055555702e4d0 in zero_v3 (r=0x0) at //source/blender/blenlib/intern/math_vector_inline.c:42
42        r- [x] = 0.0f;

Full backtrace: P1158

```Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555702e4d0 in zero_v3 (r=0x0) at //source/blender/blenlib/intern/math_vector_inline.c:42 42 r- [x] = 0.0f; ``` Full backtrace: P1158

Added subscriber: @brecht

Added subscriber: @brecht

This was introduced in a cleanup commit 69ad44d5b4.
Reverting it (+ tweaks for DNA to build) fix it P1159.

I will try to find a real solution, but since we are that close to release I may revert the faulty commit.

This was introduced in a cleanup commit 69ad44d5b4. Reverting it (+ tweaks for DNA to build) fix it [P1159](https://archive.blender.org/developer/P1159.txt). I will try to find a real solution, but since we are that close to release I may revert the faulty commit.

This issue was referenced by c1af9ef031

This issue was referenced by c1af9ef0312a40f4940696df9d964943c869e14c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2019-11-11 16:20:37 +01:00
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71487
No description provided.