Fix T71487: Crashes When Calling Texture Space Operators

Issue introduced on 69ad44d5b48a.

Differential Revision: https://developer.blender.org/D6224